Fixed spacing in hero

--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@
 }
 
 .hero__text {
+    text-align: center;
     color: #00558E;
     font-family: Arial, Helvetica, sans-serif;
     border-bottom: 5px solid #00558E;
